# forager

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  run.sh
.github/workflows/: ci.yml  evals.yml
docs/: evals.md
forager/: constants.py  runner.py
forager/bot/: telegram.py
forager/evals/: eval_agent.py
reddit_summariser/: constants.py  extract.py  models.py  publish.py  runner.py  summarise.py
reddit_summariser/agent/: agent.py  tools.py
reddit_summariser/bot/: telegram.py
reddit_summariser/evals/: eval_agent.py
reddit_summariser/utils/: json_schemas.py  reddit.py  summarise.py
reddit_summariser/vectordb/: store.py
tests/: conftest.py  test_extract.py  test_models.py  test_tools.py  test_vectordb.py
