[tool.poetry]
name = "forager"
version = "0.2.0"
description = "An AI agent that collects and chats with news and discussions from across the web"
authors = ["Oliver Batey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
praw = "^7.7.1"
pydantic = "^2.0"
openai = "^1.60.0"
chromadb = ">=0.5.0,<1.0"
python-telegram-bot = "^21.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
